--- a/src/app/reschedule/reschedule.component.css
+++ b/src/app/reschedule/reschedule.component.css
@@ -226,21 +226,6 @@ p
        font-family: 'Trebuchet MS';
       }
     
-     .cancelBtn
-     {
-       width: 120px;
-       height: 40px;
-       background-color: #D62828;
-       color: #FFFFFF;
-       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-       font-size: 13px;
-       float: right;
-       margin-right: 20px;
-       margin-top: 30px;
-       
-       
-     }
-    
      .reschedBtn
     {
       width: 160px;
@@ -252,6 +237,21 @@ p
       float: right;
       margin-top: 70px;
       margin-right: 25px;
+    }
+    .backBtn{
+      font-size: 20px;
+      float: left;
+      margin: 5px;
+      margin-top: 1px;
+      color: #003049;
+    }
+    
+    .back
+    {
+      font-size: 20px;
+      float: left;
+      margin-top: 3px;
+      color: #003049;
     }
 }
 @media (max-width: 820px)
