--- a/src/app/requestdetails/requestdetails.component.html
+++ b/src/app/requestdetails/requestdetails.component.html
@@ -1,16 +1,18 @@
-
-  <!--HEADER------------------------------------------------>
-  <mat-toolbar>
-    <h1 class="ayosgamit">Ayosgamit</h1>
-  </mat-toolbar>
-  <div class="container">
-    <!--REQUEST SUMMARY------------------------------------------------>
+<!--HEADER------------------------------------------------>
+<mat-toolbar>
+  <h1 class="ayosgamit">Ayosgamit</h1>
+</mat-toolbar>
+<div class="container">
+  <!--REQUEST SUMMARY------------------------------------------------>
+  <div>
     <div>
-   
-     <div>
+      <h1 class="backBtn" routerLink="/dashboard">
+        <mat-icon class="back"><b>keyboard_return</b></mat-icon>Back to Dashboard
+      </h1>
+    </div>
+    <div>
       <button mat-raised-button (click)="getConfirmation()" class="cancelBtn">Cancel Request</button>
-      <button mat-raised-button class="reschedBtn" routerLink="/reschedule">Reschedule Request</button>
-     </div>
+    </div>
 
     <mat-card class="summary">
       <div>
@@ -88,19 +90,7 @@
           </tr>
         </tbody>
       </table>
-  
-      <div>
-        <button mat-raised-button class="proceedBtn" routerLink="/dashboard">Done</button>
-      </div>
     </mat-card>
   </div>
-    <!--PAYMENT SUMMARY------------------------------------------------>
-   
-
-    
-  </div>
-
-    
-      
-    
-
+  <!--Technicians Details------------------------------------------------>
+</div>
