--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,28 +1,23 @@
 <body>
     <mat-toolbar>
-        <h1 class="ayosgamit" routerLink="/home" >Ayosgamit</h1>
+        <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
+        <button mat-button class="toolbarBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
+            </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+            <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+            <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+            <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+            <button mat-menu-item routerLink="/menu_tv">Television</button>
+        </mat-menu>
 
-        <div>
-            <button mat-button class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
-                </button>
-            <mat-menu #menu="matMenu">
-                <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
-                <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
-                <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
-                <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
-                <button mat-menu-item routerLink="/menu_tv">Television</button>
-            </mat-menu>
-        </div>
-        <div>
-            <button mat-button class="pricingBtn" routerLink="/pricing">Pricing</button>
-            <button mat-button class="contactUsBtn" routerLink="/contact_us">Contact Us</button>
-            <button mat-button class="aboutusBtn" routerLink="/about_us">About Us</button>
-        </div>
+        <button mat-button class="toolbarBtn" routerLink="/pricing">Pricing</button>
+        <button mat-button class="toolbarBtn" routerLink="/contact_us">Contact Us</button>
+        <button mat-button class="toolbarBtn" routerLink="/about_us">About Us</button>
+
         <span class="spacer"></span>
-        <div>
-            <button mat-button class="navLogin" routerLink="/login">Sign In</button>
-            <button mat-button class="navLogin" routerLink="/login">Sign Up</button>
-        </div>
+
+        <button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>
     </mat-toolbar>
 
     <div>
