--- a/src/app/loginform/loginform.component.css
+++ b/src/app/loginform/loginform.component.css
@@ -9,67 +9,49 @@
         height: 100vh;
         background-attachment: fixed;
     }
-    .mat-toolbar{
-        background-color: #D62828;
-        width: 100%;
-      }
-    
-      .ayosgamit
-      {
-        font-family: 'Candara';
-        font-size: 30px;
-        position: center;
-        color: #FFFFFF;
-      }
-      .pricingBtn
-      {
-          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-          color: #FFFFFF;
-          font-size: 17px;
-          float: left;
-          margin-left: 100px;
-          margin-top: 80px;
-          margin-top: 0;
-          
-      }
-      
-      .contactUsBtn
-      {
-          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-          color: #FFFFFF;
-          font-size: 17px;
-          float: left;
-          margin-left: 100px;
-          margin-top: 0;
-      }
-      
-      .aboutusBtn
-      {
-          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-          color: #FFFFFF;
-          font-size: 17px;
-          float: left;
-          margin-left: 100px;
-          margin-top: 0;
-      }
-      
-      .menuBtn
-      {
-          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-          color: #FFFFFF;
-          font-size: 17px;
-          float: left;
-          margin-left: 100px;
-          margin-top: 0;
+    .logo{
+
+        width: 300px !important;
+        height: 110px !important;
+        margin-top: 25px !important;
       }
       .spacer{
-          flex: 1 1 auto;
-        }
-        .navLogin{
-          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-          color: #FFFFFF;
-          font-size: 17px;
-        }
+        flex: 1 1 auto;
+      }
+    .mat-toolbar{
+        width: 100%;
+    }
+    .toolbarBtn
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        margin: 25px;
+        margin-top: 30px;
+    }
+    
+    .toolbarBtn:hover, .toolbarBtn:active {
+        color:#dd0346;
+    }
+    
+    .loginBtn
+    {
+        float: right !important;
+        width: 140px;
+        height: 40px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #dd0346;
+        color: #FFFFFF;
+        font-size: 15px;
+    }
+    
+    .loginBtn:hover, .loginBtn:active {
+        color:#f9dcc4;
+    }
+    .mat-icon
+    {
+        font-size: 20px;
+    }
 .card{
     background-color: #FFFFFF;
     width: 40%;
@@ -81,19 +63,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-}
-  
-.ayosgamit
-{
-  font-family: 'Candara';
-  font-size: 30px;
-  margin-left: 10px;
-  color: #FFFFFF;
 }
 
 .signincard
@@ -118,13 +87,6 @@
     text-align: center;
 }
 
-.logo
-{
-    height: 30%;
-    width: 30%;
-    justify-content: center;
-    margin: auto;
-}
 .login-emailfield
 {
     min-height: 40px;
@@ -167,7 +129,7 @@
     margin-left: 10px;
     border: #FCA311;
 }
-.loginBtn
+.loginBtn1
 {
     background-color: #D62828;
     color: #FFFFFF;
@@ -356,7 +318,7 @@ h1
         margin-left: 10px;
         border: #FCA311;
     }
-    .loginBtn
+    .loginBtn1
     {
         background-color: #D62828;
         color: #FFFFFF;
