--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,28 +1,24 @@
 <body>
   <mat-toolbar>
-    <h1 class="ayosgamit" routerLink="/home">Ayosgamit</h1>
-    <div>
-      <button mat-button class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu">
+    <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
+    <button mat-button class="toolbarBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
+        </button>
+    <mat-menu #menu="matMenu">
         <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
         <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
         <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
         <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
         <button mat-menu-item routerLink="/menu_tv">Television</button>
-      </mat-menu>
-    </div>
-    <div>
-      <button mat-button class="pricingBtn" routerLink="/pricing">Pricing</button>
-      <button mat-button class="contactUsBtn" routerLink="/contact_us">Contact Us</button>
-      <button mat-button class="aboutusBtn" routerLink="/about_us">About Us</button>
-    </div>
+    </mat-menu>
+
+    <button mat-button class="toolbarBtn" routerLink="/pricing">Pricing</button>
+    <button mat-button class="toolbarBtn" routerLink="/contact_us">Contact Us</button>
+    <button mat-button class="toolbarBtn" routerLink="/about_us">About Us</button>
+
     <span class="spacer"></span>
-    <div>
-      <button mat-button class="navLogin" routerLink="/login">Sign In</button>
-      <button mat-button class="navLogin" routerLink="/login">Sign Up</button>
-    </div>
-  </mat-toolbar>
+
+    <button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>
+</mat-toolbar>
   <mat-card class="card">
     <div>
       <img class="logo" mat-card-image src="../../assets/mainlogo.png">
@@ -55,7 +51,7 @@
                 {{minPw}} characters</mat-error>
             </mat-form-field>
 
-            <button mat-raised-button class="loginBtn" type="submit">Login</button>
+            <button mat-raised-button class="loginBtn1" type="submit">Login</button>
 
           </form>
         </mat-tab>
