--- a/src/app/menu-aircon/menu-aircon.component.html
+++ b/src/app/menu-aircon/menu-aircon.component.html
@@ -1,29 +1,24 @@
 <body>
     <mat-toolbar>
-        <h1 class="ayosgamit" routerLink="/home">Ayosgamit</h1>
-        <div>
-            <button mat-button class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
+        <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
+        <button mat-button class="toolbarBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
             </button>
-            <mat-menu #menu="matMenu">
-                <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
-                <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
-                <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
-                <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
-                <button mat-menu-item routerLink="/menu_tv">Television</button>
-            </mat-menu>
-        </div>
-        <div>
-            <button mat-button class="pricingBtn1" routerLink="/pricing">Pricing</button>
-            <button mat-button class="contactUsBtn1" routerLink="/contact_us">Contact Us</button>
-            <button mat-button class="aboutusBtn1" routerLink="/about_us">About Us</button>
-        </div>
-        <span class="spacer"></span>
-        <div>
-            <button mat-button class="navLogin" routerLink="/login">Sign In</button>
-            <button mat-button class="navLogin" routerLink="/login">Sign Up</button>
-        </div>
-    </mat-toolbar>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+            <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+            <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+            <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+            <button mat-menu-item routerLink="/menu_tv">Television</button>
+        </mat-menu>
 
+        <button mat-button class="toolbarBtn" routerLink="/pricing">Pricing</button>
+        <button mat-button class="toolbarBtn" routerLink="/contact_us">Contact Us</button>
+        <button mat-button class="toolbarBtn" routerLink="/about_us">About Us</button>
+
+        <span class="spacer"></span>
+
+        <button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>
+    </mat-toolbar>
     <div>
         <mat-card>
             <div class="description">
