--- a/src/app/pricing/pricing.component.css
+++ b/src/app/pricing/pricing.component.css
@@ -10,72 +10,48 @@
         background-attachment: fixed;
         
     }
-.mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
+    .logo{
 
-  .mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-
-  .ayosgamit
-  {
-    font-family: 'Candara';
-    font-size: 30px;
-    position: center;
-    color: #FFFFFF;
-  }
-  
-  
-  .pricingBtn
-  {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #FFFFFF;
-      font-size: 17px;
-      float: left;
-      margin-left: 100px;
-      margin-top: 80px;
-      margin-top: 0;
-      
-  }
-  
-  .contactUsBtn
-  {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #FFFFFF;
-      font-size: 17px;
-      float: left;
-      margin-left: 100px;
-      margin-top: 0;
-  }
-  
-  .aboutusBtn
-  {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #FFFFFF;
-      font-size: 17px;
-      float: left;
-      margin-left: 100px;
-      margin-top: 0;
-  }
-  .menuBtn
-  {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #FFFFFF;
-      font-size: 17px;
-      float: left;
-      margin-left: 100px;
-      margin-top: 0;
-  }
-  .spacer{
-      flex: 1 1 auto;
+        width: 300px !important;
+        height: 110px !important;
+        margin-top: 25px !important;
+      }
+      .spacer{
+        flex: 1 1 auto;
+      }
+    .mat-toolbar{
+        width: 100%;
     }
-    .navLogin{
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #FFFFFF;
-      font-size: 17px;
+    .toolbarBtn
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        margin: 25px;
+        margin-top: 30px;
+    }
+    
+    .toolbarBtn:hover, .toolbarBtn:active {
+        color:#dd0346;
+    }
+    
+    .loginBtn
+    {
+        float: right !important;
+        width: 140px;
+        height: 40px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #dd0346;
+        color: #FFFFFF;
+        font-size: 15px;
+    }
+    
+    .loginBtn:hover, .loginBtn:active {
+        color:#f9dcc4;
+    }
+    .mat-icon
+    {
+        font-size: 20px;
     }
 
 .title
