--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -77,6 +77,11 @@ you need at home directly
   <h1 class="header2txt">Why people are choosing us</h1>
 </div>
 
+<div>
+  <img class="convenientimg" mat-card-image src="../../assets/convenient.png">
+  <img class="protectimg" mat-card-image src="../../assets/protect.png">
+  <img class="guaranteeimg" mat-card-image src="../../assets/guarantee.png">
+ </div>
      
 </body>
   
