--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,5 +1,21 @@
 @media (min-width: 820px)
 {
+    
+    
+    .logo{
+
+        width: 30% !important;
+        height: 20% !important;
+        margin-left: 80px !important;
+        margin-top: 10px !important;
+      }
+      
+      .nav-icon{
+        color: #003049;
+        font-size: 35px;
+        margin-left: 25px;
+        margin-top: -12px;
+      }
     body
     {
         
@@ -10,57 +26,29 @@
         background-attachment: fixed;
     }
 
-    .logo{
+  mat-toolbar
+  {
+      width: 100%;
+      height: 10%;
+  }
 
-        width: 300px !important;
-        height: 110px !important;
-        margin-top: 25px !important;
-      }
-      .spacer{
-        flex: 1 1 auto;
-      }
-    .mat-toolbar{
-        width: 100%;
-    }
-    .toolbarBtn
+   .logo
+   {
+        max-width: 200px;
+        height: 100px !important;
+   }
+
+    .content
     {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
-        margin: 25px;
-        margin-top: 30px;
-    }
-    
-    .toolbarBtn:hover, .toolbarBtn:active {
-        color:#dd0346;
-    }
-    
-    .loginBtn
-    {
-        float: right !important;
-        width: 140px;
-        height: 40px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #dd0346;
-        color: #FFFFFF;
-        font-size: 15px;
-    }
-    
-    .loginBtn:hover, .loginBtn:active {
-        color:#f9dcc4;
-    }
-    .mat-icon
-    {
-        font-size: 20px;
-    }
-    
-    .content{ 
+        
        float: left;
        margin-left: 380px;
        margin-top: 250px;
+        
     }
     
-    .title1{
+    .title1
+    {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         float: left;
@@ -68,7 +56,8 @@
         margin-left: 10px;
     }
     
-    .title2{
+    .title2
+    {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         float: left;
@@ -77,42 +66,119 @@
         margin-top: 35px;
     }
 
-    .bookBtn{
-        width: 150px;
-        height: 50px;
-        float: left;
-        margin-left: -480px;
-        margin-top: 350px !important;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #dd0346;
-        color: #FFFFFF;
-        text-decoration: none !important;
-        border-radius: 3px;
-        font-size: 18px;
-    }
+    .bookBtn
+{
+    width: 150px;
+    height: 50px;
+    float: left;
+    margin-left: -480px;
+    margin-top: 350px !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #dd0346;
+    color: #FFFFFF;
+    text-decoration: none !important;
+    border-radius: 3px;
+    font-size: 18px;
+}
 
 .bookBtn:hover, .bookBtn:active {
     color:#ffb5a7;
 }
 
-    .image1
+    .image
     {
-        width: 30%;
+        width: 35%;
         height: 30%;
         float: right;
-        margin-right: 170px;
-        margin-top: -250px;
+        margin-right: 270px;
+        margin-top: 100px;
 
     }
 
-    .image2
+   
+
+    .menuBtn
     {
-        width: 30%;
-        height: 30%;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
         float: left;
-        margin-left: 900px;
-        margin-top: -310px;
+        margin-left: 50px;
+        margin-top: 20px;
     }
+    
+    .menuBtn:hover, .menuBtn:active {
+        color:#dd0346;
+    }
+
+.pricingBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    float: left;
+    margin-left: 50px;
+    margin-top: 20px;
+    font-size: 17px;
+    
+}
+
+
+.pricingBtn:hover, .pricingBtn:active {
+    color:#dd0346;
+}
+
+.contactUsBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+
+.contactUsBtn:hover, .contactUsBtn:active {
+    color:#dd0346;
+}
+
+.aboutusBtn
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin-left: 50px;
+    margin-right: 700px;
+    margin-top: 20px;
+}
+
+.aboutusBtn:hover, .aboutusBtn:active {
+    color:#dd0346;
+}
+
+.spacer{
+    flex: 1 1 auto;
+  }
+
+.loginBtn
+{
+    float: right !important;
+   
+    width: 140px;
+    height: 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #dd0346;
+    color: #FFFFFF;
+    font-size: 15px;
+}
+
+.loginBtn:hover, .loginBtn:active {
+    color:#f9dcc4;
+}
+mat-icon
+{
+    font-size: 20px;
+}
 
 .headertxt
 {
@@ -281,7 +347,7 @@
         height: 30%;
         float: left !important;
         margin-left: 10px;
-        margin-top: 25px !important;
+        margin-top: 20px;
     }
     
     .content
