authorized admin and user, updated toolbar connected to homepage

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,8 +1,7 @@
 <body>
     <mat-toolbar>
         <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
-        <button mat-button class="toolbarBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
-            </button>
+        <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
         <mat-menu #menu="matMenu">
             <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
             <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
@@ -11,12 +10,11 @@
             <button mat-menu-item routerLink="/menu_tv">Television</button>
         </mat-menu>
 
-        <button mat-button class="toolbarBtn" routerLink="/pricing">Pricing</button>
-        <button mat-button class="toolbarBtn" routerLink="/contact_us">Contact Us</button>
-        <button mat-button class="toolbarBtn" routerLink="/about_us">About Us</button>
+        <label class="toolbarBtn" routerLink="/pricing">Pricing</label>
+        <label class="toolbarBtn" routerLink="/contact_us">Contact Us</label>
+        <label class="toolbarBtn" routerLink="/about_us">About Us</label>
 
         <span class="spacer"></span>
-
         <button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>
     </mat-toolbar>
 
