--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -10,25 +10,41 @@
         background-attachment: fixed;
         
     }
-    .logo{
-
-        width: 300px !important;
-        height: 110px !important;
-        margin-top: 25px !important;
-      }
+    .logo
+    {
+         max-width: 200px;
+         height: 100px !important;
+         margin-left: 30px !important;
+         margin-top: 20px !important;
+    }
       .spacer{
         flex: 1 1 auto;
       }
     .mat-toolbar{
         width: 100%;
+        height: 10%;
+    }
+    .menuBtn
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    
+    .menuBtn:hover, .menuBtn:active {
+        color:#dd0346;
     }
     .toolbarBtn
     {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
         font-size: 17px;
-        margin: 25px;
-        margin-top: 30px;
     }
     
     .toolbarBtn:hover, .toolbarBtn:active {
