--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -1,24 +1,22 @@
 <body>
     <mat-toolbar>
         <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
-        <button mat-button class="toolbarBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
-            </button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
-            <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
-            <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
-            <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
-            <button mat-menu-item routerLink="/menu_tv">Television</button>
-        </mat-menu>
-
-        <button mat-button class="toolbarBtn" routerLink="/pricing">Pricing</button>
-        <button mat-button class="toolbarBtn" routerLink="/contact_us">Contact Us</button>
-        <button mat-button class="toolbarBtn" routerLink="/about_us">About Us</button>
-
-        <span class="spacer"></span>
-
-        <button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>
-    </mat-toolbar>
+              <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label> 
+                  <mat-menu #menu="matMenu">
+                    <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+                    <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+                    <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+                    <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+                    <button mat-menu-item routerLink="/menu_tv">Television</button>
+                  </mat-menu>
+  
+                  <label class="toolbarBtn" routerLink="/pricing">Pricing</label>
+                  <label class="toolbarBtn" routerLink="/contact_us">Contact Us</label>
+                  <label class="toolbarBtn" routerLink="/about_us">About Us</label>
+                  
+                  <span class="spacer"></span>
+                    <button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>           
+        </mat-toolbar>      
     <h1 class="title">Pricing </h1>
     <mat-tab-group>
         <!--AIRCON------------------------------------------------------------------>
