--- a/src/app/change-password/change-password.component.css
+++ b/src/app/change-password/change-password.component.css
@@ -152,15 +152,30 @@
   margin-top: 100px;
 }
 
-.textfields
+.newPass
+{
+    min-height: 40px;
+    width: 300px;
+    margin-left: 10px;
+    margin-top: 25px;
+}
+.conPass
 {
     min-height: 40px;
     width: 300px;
     margin-left: 10px;
 }
+.saveBtn{
+  width: 130px;
+  height: 40px;
+  margin: auto;
+  margin-bottom: 35px;
+  font-size: 16px;
+  color: #FFFFFF;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #F77F00;
+}
 .backBtn{
-  
-  
   font-size: 20px;
   float: left;
   margin-top: 50px;
@@ -168,7 +183,7 @@
   color: #003049;
 }
 
-mat-icon
+.backIcon
 {
   font-size: 20px;
   float: left;
@@ -177,22 +192,11 @@ mat-icon
   color: #003049;
 }
 
-.saveBtn{
-  width: 130px;
-  height: 40px;
-  margin-top: 10px;
-  font-size: 16px;
-  float: right;
-  margin-right: 20px;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #F77F00;
-}
+
 .infoLbl
 {
   font-size: 25px;
-  margin-top: 10px;
-  float: left !important;
+  margin-top: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
