--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -48,43 +48,37 @@
             <span class="spacer"></span>
         </mat-toolbar>
         <h1 class="backBtn" routerLink="/profile">
-            <mat-icon><b>keyboard_return</b></mat-icon>Back to Profile
+            <mat-icon class="backIcon"><b>keyboard_return</b></mat-icon>Back to Profile
             </h1>
         <div class="container">
-            <form [formGroup]="changePassForm" (ngSubmit)="changePassSubmit()">
+            <form [formGroup]="changePassForm" (ngSubmit)="onPasswordChange()">
                 <div class="card">
                     <h1 class="infoLbl">Change Password</h1>
                     <p>
-                        <mat-form-field class="textfields" appearance="outline">
-                            <mat-label>Current Password</mat-label>
-                            <input matInput formControlName="currentPassword" [errorStateMatcher]="matcher"
-                                placeholder="Enter current password" [type]="hide ? 'password' : 'text'"
-                                autocomplete="off">
-                            <mat-error *ngIf="changePassForm.get('currentPassword').hasError('required')">Current Password is
-                                required</mat-error>
-                            <mat-error *ngIf="changePassForm.get('currentPassword').hasError('minlength')">Password must
-                                have at least
-                                {{minPw}} characters</mat-error>
-                            <mat-error *ngIf="changePassForm.get('currentPassword').hasError('maxlength')">Password
-                                contains maximum of
-                                {{maxPw}} characters</mat-error>
-                        </mat-form-field>
-                    </p>
-                    <p>
-                        <mat-form-field class="textfields" appearance="outline">
+                        <mat-form-field class="newPass" appearance="outline">
                             <mat-label>New Password</mat-label>
                             <input matInput formControlName="newPassword" [errorStateMatcher]="matcher"
-                                placeholder="Enter new password" [type]="hide ? 'password' : 'text'" autocomplete="off">
-                            <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' :
-                                'visibility'}} </mat-icon>
+                                placeholder="Enter current password" [type]="hide ? 'password' : 'text'"
+                                autocomplete="off">
                             <mat-error *ngIf="changePassForm.get('newPassword').hasError('required')">New Password is
                                 required</mat-error>
                             <mat-error *ngIf="changePassForm.get('newPassword').hasError('minlength')">Password must
                                 have at least
                                 {{minPw}} characters</mat-error>
-                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('maxlength')">Password contains
-                                maximum of
+                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('maxlength')">Password
+                                contains maximum of
                                 {{maxPw}} characters</mat-error>
+                        </mat-form-field>
+                    </p>
+                    <p>
+                        <mat-form-field class="conPass" appearance="outline">
+                            <mat-label>Confirm Password</mat-label>
+                            <input matInput formControlName="confirmpassword" [errorStateMatcher]="matcher"
+                                placeholder="Enter new password" [type]="hidee ? 'password' : 'text'" autocomplete="off">
+                            <mat-icon mat-icon-button matSuffix (click)="hidee = !hidee">{{hide ? 'visibility_off' :
+                                'visibility'}} </mat-icon>
+                            <mat-error *ngIf="changePassForm.get('confirmpassword').hasError('required')">Confirm Password is required</mat-error>
+                            <mat-error *ngIf="changePassForm.get('confirmpassword').hasError('mismatch')">Password did not match</mat-error>
                         </mat-form-field>
                     </p>
                     <button class="saveBtn" type="submit" mat-raised-button> Save Changes </button>
