--- a/src/app/paymentform/paymentform.component.html
+++ b/src/app/paymentform/paymentform.component.html
@@ -25,16 +25,39 @@
     <div>
       <h1 class="paymentinfotxt">Payment Summary</h1>
     </div>
-    <table class="table" *ngFor="let sr of service_request">
+    <table class="table">
       <thead>
         <tr>
           <th>Check Up Fee</th>
+          <div *ngIf="service.cleaningfee != null; then thenClean else elseClean"></div>
+          <ng-template #thenClean><th>Cleaning Fee</th></ng-template>
+          <ng-template #elseClean></ng-template>
+          
+          <div *ngIf="service.installfee != null; then thenInstall else elseInstall"></div>
+          <ng-template #thenInstall><th>Installation Fee</th></ng-template>
+          <ng-template #elseInstall></ng-template>
+
+          <div *ngIf="service.unitfee != null; then thenUnit else elseUnit"></div>
+          <ng-template #thenUnit><th>Additional Fee</th></ng-template>
+          <ng-template #elseUnit></ng-template>
         </tr>
       </thead>
 
       <tbody>
         <tr>
-          <td>{{sr.checkupfee}}</td>
+          <td>{{service.checkupfee}}.00</td>
+          <div *ngIf="service.cleaningfee != null; then clean else elseclean"></div>
+          <ng-template #clean><td>{{service.cleaningfee}}.00</td></ng-template>
+          <ng-template #elseclean></ng-template>
+          
+
+          <div *ngIf="service.installfee != null; then install else elseInstall"></div>
+          <ng-template #install><td>{{service.installfee}}.00</td></ng-template>
+          <ng-template #elseInstall></ng-template>
+
+          <div *ngIf="service.unitfee != null; then unit1 else elseUnit1"></div>
+            <ng-template #unit1><td>{{service.unitfee}}.00</td></ng-template>
+            <ng-template #elseUnit1></ng-template>
         </tr>
       </tbody>
     </table>
