--- a/src/app/paymentsuccess/paymentsuccess.component.html
+++ b/src/app/paymentsuccess/paymentsuccess.component.html
@@ -11,7 +11,7 @@
    <h1 class="successtxt">Payment Success!</h1>
   
    <div class="description">
-    <p class="description1">Service request ID: XXXXXX </p>
+    <p class="description1">Service request ID: {{service._id | slice:0:9}} </p>
     <p class="description2">Your service request is pending.</p>
     <p class="description2">Please wait for the admin to approve your request.</p>
     <p class="description3">It could take a few minutes to show up in your dashboard.</p>
@@ -21,7 +21,7 @@
 
   </mat-card>
   
-  <h1 class="goTo" routerLink="/dashboard">
+  <h1 class="goTo" (click)="onSubmit()">
     <mat-icon><b>keyboard_arrow_right</b></mat-icon>Go to Dashboard
     </h1>
   
