--- a/src/app/televisiondetails/televisiondetails.component.html
+++ b/src/app/televisiondetails/televisiondetails.component.html
@@ -149,16 +149,16 @@
                 </mat-error>
               </mat-form-field>
 
-              <!--Zipcode-->
+              <!--barangay-->
               <mat-form-field class="zipcode" appearance="outline">
-                <mat-label>Zipcode</mat-label>
-                <input matInput type="number" pattern="[0-9]{3,4}" formControlName="service_zipcode"
+                <mat-label>Barangay</mat-label>
+                <input matInput type="text" formControlName="service_barangay"
                   [errorStateMatcher]="matcher" autocomplete="off">
-                <mat-error *ngIf="locationForm.get('service_zipcode').hasError('required')">
-                  Input valid zipcode
+                <mat-error *ngIf="locationForm.get('service_barangay').hasError('required')">
+                  Input valid barangay
                 </mat-error>
-                <mat-error *ngIf="locationForm.get('service_zipcode').hasError('pattern')">
-                  Input valid zipcode
+                <mat-error *ngIf="locationForm.get('service_barangay').hasError('pattern')">
+                  Input valid barangay
                 </mat-error>
               </mat-form-field>
 
