--- a/src/app/loginform/loginform.component.css
+++ b/src/app/loginform/loginform.component.css
@@ -1,14 +1,6 @@
 @media (min-width: 820px)
 {
-    body
-    {
-        background-image: url('../../assets/homebg.jpg');
-        background-size: cover;
-        text-align: center;
-        width: 100%;
-        height: 100vh;
-        background-attachment: fixed;
-    }
+    
     .logo{
 
         width: 300px !important;
@@ -54,10 +46,10 @@
     }
 .card{
     background-color: #FFFFFF;
-    width: 40%;
+    width: 30%;
     height: fit-content;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 .container{
     display: flex;
@@ -131,7 +123,7 @@
 }
 .loginBtn1
 {
-    background-color: #D62828;
+    background-color: #dd0346;
     color: #FFFFFF;
     height: 10%;
     width: 85%;
@@ -158,7 +150,7 @@ h1
 
 .signupBtn
 {
-    background-color: #D62828;
+    background-color: #dd0346;
     color: #FFFFFF;
     height: 10%;
     width: 85%;
