--- a/src/app/requestdetails/requestdetails.component.html
+++ b/src/app/requestdetails/requestdetails.component.html
@@ -42,7 +42,7 @@
             <th>Address Details</th>
             <th>City</th>
             <th>Property Type</th>
-            <th>Zip Code</th>
+            <th>Barangay</th>
           </tr>
         </thead>
         <tbody>
@@ -50,7 +50,7 @@
             <td>{{data.service_addressDetails}}</td>
             <td>{{data.service_city}}</td>
             <td>{{data.service_property_type}}</td>
-            <td>{{data.service_zipcode}}</td>
+            <td>{{data.service_barangay}}</td>
           </tr>
         </tbody>
       </table>
